--- a/backend/package.json
+++ b/backend/package.json
@@ -15,11 +15,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "@huggingface/inference": "^2.8.1",
     "@supabase/supabase-js": "^2.48.0",
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
-    "node-cron": "^3.0.3",
     "dotenv": "^16.4.7",
     "ioredis": "^5.4.1",
     "node-cron": "^3.0.3",
@@ -33,6 +33,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.23.3",
     "@babel/preset-env": "^7.24.0",
     "@babel/preset-typescript": "^7.23.3",
+    "@eslint/js": "^8.57.0",
     "@jest/types": "^29.6.3",
     "@swc/core": "^1.3.107",
     "@swc/jest": "^0.2.36",
@@ -52,7 +53,6 @@
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "@eslint/js": "^8.57.0"
+    "typescript": "^5.3.3"
   }
 }
