--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ioredis": "^5.4.1",
+    "lodash-es": "^4.17.21",
     "node-cron": "^3.0.3",
     "nodemon": "^3.0.3",
     "openai": "^4.76.3",
