--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
+    "railway:start": "node src/server.js",
     "build": "npm install",
     "postinstall": "npx puppeteer browsers install chrome",
     "test:webhook": "node tests/webhook-handler.js",
